<resources>
    <string name="app_name">Peer Tutor</string>
    <string name="login">Login to your Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="remember_me">Remember me</string>
    <string name="login_btn">Login</string>
    <string name="make_an_account">Make an Account</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="welcome_to_peertutor">Welcome to PeerTutor!</string>
    <string name="let_s_get_started_but_first_we_need_to_go_through_your_authetication">Let\'s Get Started, but first we need to go through your authetication.</string>
    <string name="go_to_login">Go to Login</string>
    <string name="go_to_registration">Go to Registration</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>