<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_to_peertutor"
        android:textColor="@color/head_text_color"
        android:textSize="28sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        android:text="@string/let_s_get_started_but_first_we_need_to_go_through_your_authetication"
        android:textSize="20sp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="#425CE7"
        android:text="@string/go_to_login"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/toRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="45dp"
        android:backgroundTint="#425CE7"
        android:text="@string/go_to_registration"
        tools:ignore="RelativeOverlap" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="350dp"
        android:visibility="gone" />
</RelativeLayout>