<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/application_bg">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/make_an_account"
        android:textColor="@color/head_text_color"
        android:textSize="28sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="40"/>

        <EditText
            android:id="@+id/newName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter Your Name"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_weight="60"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date of birth:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="40"/>

        <Button
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="11-Jan-2023"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:textSize="20sp"
            style="?android:spinnerStyle"
            android:layout_weight="60"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="50"/>

        <EditText
            android:id="@+id/newEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_weight="50"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="50"/>

        <EditText
            android:id="@+id/newPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:layout_weight="50"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_weight="40"
            android:text="Semester"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:background="@android:drawable/editbox_background"
            android:hint="Semester Number"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="20sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/remMe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/register"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#425CE7"
        android:text="@string/register" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Acc_exist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/link_color"
        android:textSize="18sp" />

</LinearLayout>